fix(sidemenu): retire la variante avec bordure et corrige le style du bouton mobile

--- a/src/component/sidemenu/style/module/_action.scss
+++ b/src/component/sidemenu/style/module/_action.scss
@@ -67,7 +67,7 @@
 // @TODO transformer en modifier
 #{ns(sidemenu__inner)} > #{ns(sidemenu__btn)} {
   @include size(100%);
-  font-weight: normal;
+  font-weight: font-weight(medium);
   @include after {
     @include margin-right(4v);
   }
